tried to fix sizing and vertical alignment

--- a/css/main.css
+++ b/css/main.css
@@ -7,41 +7,41 @@ html {
 }
 
 body {
+  min-width: 25em;
+  max-width: 40em;
+  display: inline-block;
   margin: 1.5rem;
-  background-color: #f2f2f2;
-  line-height: 1.5;
   padding-top: 1em;
   padding-bottom: 1em;
-  max-width: 25em;
+  background-color: #f2f2f2;
+  line-height: 1.5;
   font-family: "Lato", sans-serif;
   color: #333;
-  font-size: 80%;
+  font-size: 70%;
+  font-weight: 400;
+  vertical-align: middle;
 }
 
 img {
-  max-width: 100em;
-  display: block;
   width: 100%;
   color: #666;
 }
 
 h1 {
   text-align: left;
-  max-width: 25em;
+  font-weight: 700;
+  color: #333;
 }
 
-a {
-  display: inline-block;
-  margin: 1.5em;
-  max-width: 25em;
-  padding: 0.5em;
+.btn {
+  padding: 0.4em 0.75em 0.5em;
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 8px;
   border: 3px solid #333;
   text-align: center;
   text-decoration: none;
-  vertical-align: middle;
-  max-width: 25em;
+  vertical-align: left;
+  font-weight: 400;
 }
 
 .btn:hover {
